<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity2" >

    <TextView
        android:id="@+id/Name2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/NameHint"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:layout_margin="8dp"
        android:layout_marginTop="17dp" />

    <TextView
        android:id="@+id/Sex2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Name2"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:layout_margin="8dp"
        android:text="@string/SexHint"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/DateOfBirth2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:layout_margin="8dp"
        android:layout_below="@+id/Sex2"
        android:text="@string/BirthStr"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/Position2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:layout_margin="8dp"
        android:layout_below="@+id/DateOfBirth2"
        android:text="@string/PositionHint"
        android:layout_marginTop="19dp" />

    <TextView
        android:id="@+id/Wage2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:layout_margin="8dp"
        android:layout_below="@+id/Position2"
        android:text="@string/WageHint"
        android:layout_marginTop="21dp"/>

    <TextView
        android:id="@+id/Phone2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:layout_margin="8dp"
        android:layout_below="@+id/Wage2"
        android:autoLink="phone"
        android:text="@string/PhoneHint"
        android:linksClickable="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/Email2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:layout_margin="8dp"
        android:layout_below="@+id/Phone2"
        android:text="@string/EmailHint"
        android:autoLink="email"        
        android:linksClickable="true"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/Answer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Email2"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:minLines="@integer/MinLines" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/AnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Answer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:drawableLeft="@drawable/ic_send_it"
        android:text="@string/AnswerB" 
        android:onClick="answer"/>

</RelativeLayout>
